# meme

./: .env.example  .gitignore  README.md  messages.json  pyproject.toml  transactions.json
diagram/: .$agent_flow.drawio.bkp  .$candle_bundle.drawio.bkp  .$candle_gradual_bundle.drawio.bkp  .$candle_launch_bundle.drawio.bkp  .$candle_naive.drawio.bkp  .$candle_organic.drawio.bkp  .$candle_sniper.drawio.bkp  .$case.drawio.bkp  .$comment_bot.drawio.bkp  .$cot.drawio.bkp  .$cot.drawio.dtmp  .$cot_dex.drawio.bkp  .$cot_meme.drawio.bkp  .$cot_wallet.drawio.bkp  .$creator_buy_bundle.drawio.bkp  .$flow.drawio.bkp  .$launch_bundle.drawio.bkp  .$timeline.drawio.bkp  .$w_cot.drawio.bkp  .$wash_trading_bot.drawio.bkp  .$wo_cot.drawio.bkp  agent_flow.drawio  buy_bundle.drawio  candle_gradual_bundle.drawio  candle_launch_bundle.drawio  candle_naive.drawio  candle_organic.drawio  candle_sniper.drawio  case.drawio  comment_bot.drawio  cot.drawio  cot_dex.drawio  cot_meme.drawio  cot_wallet.drawio  creator_buy_bundle.drawio  flow.drawio  launch_bundle.drawio  sankey.drawio  sell_bundle.drawio  timeline.drawio  (+3 more)
environ/: agent.py  agent_data_loader.py  block_fetcher.py  constants.py  contract_fetcher.py  data_class.py  data_loader.py  db.py  eth_fetcher.py  eventscanner.py  llm.py  meme_analyzer.py  meme_base.py  model_res.py  prompt.py  query.py  settings.py  snowflake_fetcher.py  sol_fetcher.py  solscan.py  token_monitor.py  trader_analyzer.py  transaction_monitor.py  txn_monitor.py  utils.py
scripts/: d40_sentiment_llm.ipynb  fetch_bundle.py  fetch_meme.py  fetch_pump_migrate.py  fetch_smart_contract.py  fetch_sol.py  fetch_sol_meme.py  fetch_time.py  fetch_timestamp.py  fetch_txn.py  mdd.py  monitor_raydium_new_pairs.py  monitor_raydium_txn.py  plot_forest.py  plot_historical_meme.py  plot_mdd.py  plot_ret.py  plot_txn_dis.py  process_bundle.py  process_comments.py  process_eval_pool.py  process_historical_meme.py  process_mdd.py  process_pool_txns.py  process_profit.py  process_ret_mdd.py  process_ret_survive.py  process_trader.py  reg_creator_profit.py  reg_horserace.py  reg_mask.py  reg_participant_profit.py  reg_profit.py  reg_ret_mdd.py  reg_ret_survive.py  reg_var_des.py  regress_ret_mdd.py  subscribe_migrator.py
test/: index.js  (+12 more)
(+388 files in other folders)
