[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "environ"
version = "0.0.1" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "requests==2.32.3",
    "matplotlib=3.10.1",
    "web3==7.8.0",
    "pymongo==4.11.2",
]

[project.optional-dependencies]
dev = ["pylint"]