[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "environ"
version = "0.0.1" 
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "requests==2.32.3",
    "matplotlib=3.10.1",
    "web3==7.8.0",
    "pymongo==4.11.2",
    "asyncstdlib==3.13.1",
    "solana==0.36.6",
    "solders==0.26.0",
    "base58==2.1.1",
    "watchdog==6.0.0",
    "watchfiles==1.0.4",
    "tenacity==9.0.0",
    "flipside==2.1.0",
    "networkx==3.4.2",
    "pyfixest==0.29.0"
]

[project.optional-dependencies]
dev = ["pylint"]